# Mediatheque

./: .gitignore  angular.json  cheatsheet.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs  main.rs  models.rs
src-tauri/src/api/: bgg.rs  hardcover.rs  igdb.rs  mod.rs  provider.rs  tmdb.rs
src-tauri/src/commands/: api.rs  collection.rs  entity.rs  media.rs  metadata.rs  mod.rs  path.rs  pin.rs  settings.rs
src-tauri/src/models/: api.rs  collection.rs  enums.rs  external_media.rs  image.rs  media.rs  media_details.rs  metadata.rs  mod.rs  movie.rs  pin.rs  query.rs
src-tauri/src/utils/: image.rs  mod.rs  unicode.rs
src/app/: app.component.css  app.component.html  app.component.ts  app.config.ts  app.routes.ts  data.ts
src/app/animation/: page.animation.ts
src/app/directive/: click-outside.directive.ts  dropdown.directive.ts  entity-row.component.ts  numeric-range.directive.ts
src/app/helper/: collection-routing.ts
src/app/media-grid/: media-grid.component.css  media-grid.component.html  media-grid.component.ts
src/app/media-row/: media-row.component.css  media-row.component.html  media-row.component.ts
src/app/models/: api.model.ts  collection-query.model.ts  collection.model.ts  collection.ts  collectionQuery.ts  entity.model.ts  image.model.ts  media-details.model.ts  media-query.model.ts  media.model.ts  media.ts  mediaDetails.ts  movie.ts  (+2 more)
src/style/: entity-row.scss  global.css  global.scss
(+203 files in other folders)
