[package]
name = "mediatheque"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mediatheque_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "^2.10", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.38", features = ["bundled"] }
strum = { version = "0.26", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
imagesize = { version = "0.14" }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tauri-plugin-dialog = "2"
dotenvy = "0.15"
urlencoding = "2.1.3"
serde_plain = "1.0.2"
image = { version = "0.25.10", features = ["webp"] }
futures = "0.3.32"
async-trait = "0.1.89"
tauri-plugin-fs = "2"
tokio = "1.50.0"
quick-xml = { version = "0.39.2", features = ["serialize"] }
unicode-normalization = "0.1.25"
